--- a/public/stylesheets/writeCard.css
+++ b/public/stylesheets/writeCard.css
@@ -1,185 +1,210 @@
-/*
+
 #writePost{
     display: inline-block;
     vertical-align: center;
     margin: auto auto;
 }
 
+
 .inputBox{
     padding: 0.3rem;
+    font-color:#533d4a;
+    font-weight: bold;
 }
 
+form input,
+form textarea {
+    width: 100%;
+    border: 2px solid #ddd;
+    margin: 5px 0;
+    padding: 7px 10px;
+
+}
 form textarea{
     max-width: 100%;
     min-width: 100%;
     max-height: 500px;
 }
-*/
 
-* {
-    box-sizing: border-box;
-}
-body {
-    padding: 0 1em;
-    font-family: sans-serif;
-}
-
-
-/* * Post widget * */
-
-input[type="file"] {
-    display: none;
-}
-ul {
-    list-style-type: none;
-}
-
-.btn {
-    padding: .5em 1em;
-
-    background-color: transparent;
-    color: #6b7270;
-
-    border: none;
-    cursor: pointer;
-}
-
-.widget-post {
-    width: 600px;
-    min-height: 300px;
-    height: auto;
-
-    border: 1px solid #eaeaea;
-    border-radius: 6px;
-    box-shadow: 0 1px 2px 1px rgba(130, 130, 130, 0.1);
-
-    background-color: #fff;
-
-    margin: auto;
-    overflow: hidden;
-}
-
-.widget-post__header {
-    padding: .2em .5em;
-
-    background-color: #eaeaea;
-    color: #3f5563;
-}
-.widget-post__title {
-    font-size: 18px;
-    color: #533d4a;
-    font-weight: bold;
-}
-
-.widget-post__content {
-    width: 100%;
-    height: 50%;
-}
-.widget-post__textarea {
-    width: 100%;
-    height: 100%;
-    padding: .5em;
-
-    border: none;
-    resize: none;
-}
-.widget-post__textarea:focus {
-    outline: none;
-}
-
-.widget-post__options {
-    padding: .5em;
-}
-.widget-post___input {
-    display: inline-block;
-
-    width: 24%;
-    padding: .2em .5em;
-
-    border: 1px solid #eaeaea;
-    border-radius: 1.5em;
-}
-.post-actions__label {
-    cursor: pointer;
-}
-
-.widget-post__actions {
-    width: 100%;
-    padding: .5em;
-}
-.post--actions {
-    position: relative;
-    padding: .5em;
-
-    background-color: #f5f5f5;
-    color: #a2a6a7;
-}
-.post-actions__attachments {
-    display: inline-block;
-    width: 60%;
-}
-.attachments--btn {
-    background-color: #eaeaea;
-    color: #007582;
-    font-weight: bold;
-
-    border-radius: 1.5em;
-}
-
-.post-actions__widget {
-    display: inline-block;
-    width: 38%;
-    text-align: right;
-}
-.post-actions__publish {
-    width: 120px;
-
+.submit_btn {
+   /* background: #3498db;*/
+    width: 70%;
+    border-radius: 4px;
+    border:none;
+    color: #fff;
+    padding: 10px;
+    letter-spacing: .5px;
+    font-size: 1.1em;
     background-color: #f1c83c;
     border-bottom: 3px solid #533d4a;
     border-right: 3px solid #533d4a;
-
-    color: #fff;
-
-    border-radius: 1.5em;
+    margin: 3% 20% auto 20%;
 }
 
-.scroller::-webkit-scrollbar {
-    display: none;
-}
-
-.is--hidden {
-    display: none;
-}
-
-
-/* * SR * */
-.sr-only {
-    width: 1px;
-    height: 1px;
-
-    clip: rect(1px, 1px, 1px, 1px);
-    -webkit-clip-path: inset(50%);
-    clip-path: inset(50%);
-
-    overflow: hidden;
-    white-space: nowrap;
-
-    position: absolute;
-    top: 0;
-
-}
+/** {*/
+    /*box-sizing: border-box;*/
+/*}*/
+/*body {*/
+    /*padding: 0 1em;*/
+    /*font-family: sans-serif;*/
+/*}*/
 
 
-/* *  Placeholder contrast * */
-::-webkit-input-placeholder {
-    color: #666;
-}
-::-moz-placeholder {
-    color: #666;
-}
-:-ms-input-placeholder {
-    color: #666;
-}
-:-moz-placeholder {
-    color: #666;
-}
+/*!* * Post widget * *!*/
+
+/*input[type="file"] {*/
+    /*display: none;*/
+/*}*/
+/*ul {*/
+    /*list-style-type: none;*/
+/*}*/
+
+/*.btn {*/
+    /*padding: .5em 1em;*/
+
+    /*background-color: transparent;*/
+    /*color: #6b7270;*/
+
+    /*border: none;*/
+    /*cursor: pointer;*/
+/*}*/
+
+/*.widget-post {*/
+    /*width: 600px;*/
+    /*min-height: 300px;*/
+    /*height: auto;*/
+
+    /*border: 1px solid #eaeaea;*/
+    /*border-radius: 6px;*/
+    /*box-shadow: 0 1px 2px 1px rgba(130, 130, 130, 0.1);*/
+
+    /*background-color: #fff;*/
+
+    /*margin: auto;*/
+    /*overflow: hidden;*/
+/*}*/
+
+/*.widget-post__header {*/
+    /*padding: .2em .5em;*/
+
+    /*background-color: #eaeaea;*/
+    /*color: #3f5563;*/
+/*}*/
+/*.widget-post__title {*/
+    /*font-size: 18px;*/
+    /*color: #533d4a;*/
+    /*font-weight: bold;*/
+/*}*/
+
+/*.widget-post__content {*/
+    /*width: 100%;*/
+    /*height: 50%;*/
+/*}*/
+/*.widget-post__textarea {*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*padding: .5em;*/
+
+    /*border: none;*/
+    /*resize: none;*/
+/*}*/
+/*.widget-post__textarea:focus {*/
+    /*outline: none;*/
+/*}*/
+
+/*.widget-post__options {*/
+    /*padding: .5em;*/
+/*}*/
+/*.widget-post___input {*/
+    /*display: inline-block;*/
+
+    /*width: 24%;*/
+    /*padding: .2em .5em;*/
+
+    /*border: 1px solid #eaeaea;*/
+    /*border-radius: 1.5em;*/
+/*}*/
+/*.post-actions__label {*/
+    /*cursor: pointer;*/
+/*}*/
+
+/*.widget-post__actions {*/
+    /*width: 100%;*/
+    /*padding: .5em;*/
+/*}*/
+/*.post--actions {*/
+    /*position: relative;*/
+    /*padding: .5em;*/
+
+    /*background-color: #f5f5f5;*/
+    /*color: #a2a6a7;*/
+/*}*/
+/*.post-actions__attachments {*/
+    /*display: inline-block;*/
+    /*width: 60%;*/
+/*}*/
+/*.attachments--btn {*/
+    /*background-color: #eaeaea;*/
+    /*color: #007582;*/
+    /*font-weight: bold;*/
+
+    /*border-radius: 1.5em;*/
+/*}*/
+
+/*.post-actions__widget {*/
+    /*display: inline-block;*/
+    /*width: 38%;*/
+    /*text-align: right;*/
+/*}*/
+/*.post-actions__publish {*/
+    /*width: 120px;*/
+
+    /*background-color: #f1c83c;*/
+    /*border-bottom: 3px solid #533d4a;*/
+    /*border-right: 3px solid #533d4a;*/
+
+    /*color: #fff;*/
+
+    /*border-radius: 1.5em;*/
+/*}*/
+
+/*.scroller::-webkit-scrollbar {*/
+    /*display: none;*/
+/*}*/
+
+/*.is--hidden {*/
+    /*display: none;*/
+/*}*/
+
+
+/*!* * SR * *!*/
+/*.sr-only {*/
+    /*width: 1px;*/
+    /*height: 1px;*/
+
+    /*clip: rect(1px, 1px, 1px, 1px);*/
+    /*-webkit-clip-path: inset(50%);*/
+    /*clip-path: inset(50%);*/
+
+    /*overflow: hidden;*/
+    /*white-space: nowrap;*/
+
+    /*position: absolute;*/
+    /*top: 0;*/
+
+/*}*/
+
+
+/*!* *  Placeholder contrast * *!*/
+/*::-webkit-input-placeholder {*/
+    /*color: #666;*/
+/*}*/
+/*::-moz-placeholder {*/
+    /*color: #666;*/
+/*}*/
+/*:-ms-input-placeholder {*/
+    /*color: #666;*/
+/*}*/
+/*:-moz-placeholder {*/
+    /*color: #666;*/
+/*}*/
