--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
   <div class="tagUrl">
     <form class="tagUrl" name="frm_tagUrl">
       <input type="text" id="tagUrl" class="input_tagUrl" placeholder="    입장할 태그를 입력하세요">
-      <input type="button" class="btn_url" value="이동" onclick="getChatRoom()">
+      <input type="submit" class="btn_url" value="이동" onclick="getChatRoom()">
     </form>
   </div>
   <script language="javascript">
