--- a/public/stylesheets/myPage.css
+++ b/public/stylesheets/myPage.css
@@ -28,24 +28,37 @@
 .userPostBox{
     margin: auto auto;
     vertical-align: center;
-    width: 60%;
-    height: 100%;
+    width: 70%;
+    height: 70%;
+    /*width:auto; height:auto;*/
     text-align: center;
+    /*style: "max-width: 100%; height: auto;*/
+    /*max-width:100px;*/
+    /*max-height:100px;*/
 }
 .postItem{
     vertical-align: middle;
     margin: auto auto;
     padding: 1rem;
     display: inline-block;
-    height: 350px;
+    /*height: 350px;*/
+    width: auto; height:auto;
+    max-width: 300px;
+    max-height: 300px;
 }
 .postItem_image{
-    width: 200px;
-    height: 200px;
+    /*width: 200px;*/
+    /*height: 200px;*/
     line-height: 200px;
     overflow: hidden;
     text-align: center;
     vertical-align: center;
+    width:auto; height:auto;
+    max-width: 200px;
+    max-height: 200px;
+    overflow: hidden;
+    border: 1px solid #533d4a;
+    background-size:100%;
 }
 .postItem_image > img{
     max-width:100%; max-height:100%;
