[Merge] Merge seungjoopet

--- a/views/myPage.ejs
+++ b/views/myPage.ejs
@@ -116,24 +116,9 @@
         }
     </script>
     <div class="userPostBox" id="userPostBox">
-        <!---<a href="/users/card/test" class="postItem">
+        <!--
+        <a href="/users/card/test" class="postItem">
             <div class="postItem_image">
-<<<<<<< HEAD
-                <img src="/images/post/test/XujRAcX9.jpg" style="max-width: 100%; height: auto;">
-            </div>
-            <!--<div class="postItem_text">-->
-                <!--<div class="postItem_textTitle">-->
-                    <!--<h3 class="postTitle">타이틀 테스트</h3>-->
-                <!--</div>-->
-                <!--<div class="postItem_textContent">-->
-                    <!--<div class="postLine">내용전달 내용전달 내용전달...</div>-->
-                    <!--<div class="postLine">내용전달 내용전달 내용전달...</div>-->
-                    <!--<div class="postLine">내용전달 내용전달 내용전달...</div>-->
-                    <!--<div class="postLine">내용전달 내용전달 내용전달...</div>-->
-                <!--</div>-->
-            <!--</div>-->
-        </a>
-=======
                 <img src="/images/post/test/XujRAcX9.jpg" alt="">
             </div>
             <div class="postItem_text">
@@ -145,9 +130,8 @@
                     <div class="postLine">내용전달 내용전달 내용전달...</div>
                 </div>
             </div>
-        </a>--->
->>>>>>> 84343dd66416579c391323ae832ef3ed5a93ede7
-
+        </a>
+        --->
     </div>
 </div>
 </body>
