[Change] Change url

--- a/views/editCard.ejs
+++ b/views/editCard.ejs
@@ -5,12 +5,11 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="/stylesheets/writeCard.css" />
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.3.min.js" ></script>
-    <script src="/javascripts/writeCard.js"></script>
 </head>
 <body>
 
 <div class="container">
-    <form action="/posts/card" method="post" id="writePost" class="writePost" enctype="multipart/form-data">
+    <form action="/users/card" method="post" id="writePost" class="writePost" enctype="multipart/form-data">
         <input type="text" name="user_ObjectId" style="display: none" />
         <input type="text" name="card_id" value="0" style="display: none"/>
         <div class="titleBox inputBox">
