--- a/views/header.ejs
+++ b/views/header.ejs
@@ -12,7 +12,7 @@
     </div>
     <div class="loginStatus">
         <%if (typeof uid != 'undefined') {%>
-        <a href="/users/mypage/<%=uid%>">
+        <a href="/users/userProfile/<%=uid%>">
             <%= uid %>
         </a>
 
