--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -49,7 +49,7 @@
     </div>
     <script>
         function writePost(){
-            window.open('/users/writeCard', null, "width = 600, height = 600, location=no, resizable=no")
+            window.open('/users/userProfile/<%=uid%>/editCard', null, "width = 600, height = 600, location=no, resizable=no")
         }
     </script>
     <div class="userPostBox" id="userPostBox">
