[Fix] Error Fix

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -35,7 +35,7 @@
                         'success' : function(json){
                             if(json['success'] === true){
                                 alert(json['message']);
-                                location.replace('http://localhost:3030/');
+                                location.replace('http://localhost/');
                             }else{
                                 alert(json['message']);
                             }
