--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -20,7 +20,7 @@
         if ($(window).scrollTop() >= $(document).height() - $(window).height()) {
             // TODO : 무한스크롤 이벤트
             var CardCnt = getCookie('CardCnt');
-            getMyPostRange(parseInt(CardCnt) + 1);
+            getMyPostRange(parseInt(CardCnt));
         }
     });
 </script>
