--- a/views/register.ejs
+++ b/views/register.ejs
@@ -56,7 +56,7 @@
                                     if(json['success'] === true){
                                         alert('회원가입 완료!!');
                                         document.cookie = 'token='+json['data']['token'] + ';path=/';
-                                        location.replace('http://localhost:3030/');
+                                        location.replace('http://localhost/');
                                     }else{
                                         alert(JSON.stringify(json));
                                     }
