--- a/views/login.ejs
+++ b/views/login.ejs
@@ -39,7 +39,7 @@
                                 $.ajax({
 
                                     'type' : 'POST',
-                                    'url' : 'http://localhost:3000/auth/local',
+                                    'url' : '/auth/local',
                                     'data' : _data,
                                     'success' : function(json){
                                         if(json['success'] === true){
