[Fix] Fix url error

--- a/views/card.ejs
+++ b/views/card.ejs
@@ -20,7 +20,7 @@
         </div>
         <div class="postTag" >
             <% for(var i = 0; i < postTag.length; i++) { %>
-            <a href="/chatrooms/<%=postTag[i].substr(1)%>"><%=postTag[i]%></a>
+            <a href="/chatrooms/tag/<%=postTag[i].substr(1)%>"><%=postTag[i]%></a>
             <% } %>
         </div>
     </div>
