--- a/views/editCard.ejs
+++ b/views/editCard.ejs
@@ -10,7 +10,7 @@
 <body>
 
 <div class="container">
-    <form action="/users/card" class="writePost" id="frm_editPost" enctype="multipart/form-data">
+    <form action="/users/card" onsubmit="editCardPost()" class="writePost" id="frm_editPost" enctype="multipart/form-data">
         <input type="text" name="user_ObjectId" style="display: none" />
         <input type="text" name="card_id" value="0" style="display: none"/>
         <div class="titleBox inputBox">
