--- a/views/popTag.ejs
+++ b/views/popTag.ejs
@@ -12,7 +12,7 @@
         <div class="realtimePopulateTagBox">
             <p class="realtimePopulateTag">
                 <div class="tagTitle">
-                    <h2>실시간 인기 태그</h2>
+                    <h2>실시간 인기 채팅방</h2> <!-- 채팅 서버에서 끊어질 때마다 count -1 해야함 -->
                 </div>
                 <div class="tagListBox">
                     <ol class="tagList">
@@ -28,7 +28,7 @@
         <div class="realtimePopulateTagBox">
             <p class="realtimePopulateTag">
             <div class="tagTitle">
-                <h2>실시간 인기 태그</h2>
+                <h2>오늘의 인기 태그</h2>  <!-- 하루 지나면 reset -->
             </div>
             <div class="tagListBox">
                 <ol class="tagList">
