--- a/public/stylesheets/chatroom.css
+++ b/public/stylesheets/chatroom.css
@@ -6,7 +6,7 @@
     border: 2px solid #533d4a;
     padding: 1rem;
     margin: 1rem;
-    background-color: darkgrey;
+    background-color: #EBE9D1;
 }
 
 .postContainer{
