--- a/views/editCard.ejs
+++ b/views/editCard.ejs
@@ -31,8 +31,8 @@
         </div>
         <script type="text/javascript">
             function editCardPost(){
-                submitUrlHandler("frm_editPost", "post", "/users/card", function(){
-                    alert("등록 성공!!!");
+                submitUrlHandler("frm_editPost", "post", "/users/card", function(response){
+                    alert(JSON.stringify(response));
                 });
             }
         </script>
