--- a/views/editCard.ejs
+++ b/views/editCard.ejs
@@ -32,7 +32,7 @@
         <script type="text/javascript">
             function editCardPost(){
                 submitUrlHandler("frm_editPost", "post", "/users/card", function(response){
-                    alert(JSON.stringify(response));
+                    alert("submuitUrlHandler가 작동합니다. : " + JSON.stringify(response));
                 });
             }
         </script>
