--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
     <div class="loginTable">
         <div class="loginBox">
             <h2>Login</h2>
-            <form class="loginForm" name="frm_login" method="post" action="http://localhost:3000/auth/local">
+            <form class="loginForm" name="frm_login" method="post" action="/auth/local">
                     <div class=form-input">
                         <input type="text" name="uid" placeholder="Username" id="uid"></div>
                     <div class="form-input">
