[Change] Change location script1

--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -5,14 +5,14 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.3.min.js" ></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="/stylesheets/chatroom.css" />
-    <script src="/javascripts/getChatServerUrl.js" />
+    <script src="/javascripts/getChatServerUrl.js" /></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            getChatServerUrl();
+        })
+    </script>
 </head>
 <body>
-<script type="text/javascript">
-    $(document).ready(function() {
-        getChatServerUrl();
-    })
-</script>
 <%- include('header')%>
 <div class="container">
 
