--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.3.min.js" ></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="/stylesheets/chatroom.css" />
-    <script src="/javascripts/getChatServerUrl.js" /></script>
+    <script src="/javascripts/getChatServerUrl.js" ></script>
     <script type="text/javascript">
         $(document).ready(function() {
             getChatServerUrl();
