--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,14 +1,10 @@
 <link rel="stylesheet" href="/stylesheets/basic.css" />
 <header>
-    <div class="rightClass">
-
-    </div>
     <div class="pageTitle">
-        <h1>
-            <a href="/">
-                <%= title %>
-            </a>
-        </h1>
+        <h3><a href="/"><%= title %></a></h3>
+    </div>
+    <div class="midClass">
+
     </div>
     <div class="loginStatus">
         <%if (typeof uid != 'undefined') {%>
@@ -19,9 +15,7 @@
         <button id="btnLogout" class="button">Logout</button>
 
         <%} else { %>
-        <a href="/users/login">
-            로그인
-        </a>
+        <a href="/users/login">로그인</a>
         <%}%>
     </div>
     <script type="text/javascript">
