[Change] Change popTag page css

--- a/views/popTag.ejs
+++ b/views/popTag.ejs
@@ -16,11 +16,66 @@
                 </div>
                 <div class="tagListBox">
                     <ol class="tagList">
-                        <li class="tagRank">안녕하세요</li>
-                        <li class="tagRank">안녕하세요</li>
-                        <li class="tagRank">안녕하세요</li>
-                        <li class="tagRank">안녕하세요</li>
-                        <li class="tagRank">안녕하세요</li>
+                        <li class="list">
+                            <a href="#" class="tagRank">
+                                <em class="num">1</em>
+                                <span class="title">test</span>
+                            </a>
+                        </li>
+                        <li class="list">
+                            <a href="#" class="tagRank">
+                                <em class="num">2</em>
+                                <span class="title">test</span>
+                            </a>
+                        </li>
+                        <li class="list">
+                            <a href="#" class="tagRank">
+                                <em class="num">3</em>
+                                <span class="title">test</span>
+                            </a>
+                        </li>
+                        <li class="list">
+                            <a href="#" class="tagRank">
+                                <em class="num">4</em>
+                                <span class="title">test</span>
+                            </a>
+                        </li>
+                        <li class="list">
+                            <a href="#" class="tagRank">
+                                <em class="num">5</em>
+                                <span class="title">test</span>
+                            </a>
+                        </li>
+                        <li class="list">
+                            <a href="#" class="tagRank">
+                                <em class="num">6</em>
+                                <span class="title">test</span>
+                            </a>
+                        </li>
+                        <li class="list">
+                            <a href="#" class="tagRank">
+                                <em class="num">7</em>
+                                <span class="title">test</span>
+                            </a>
+                        </li>
+                        <li class="list">
+                            <a href="#" class="tagRank">
+                                <em class="num">8</em>
+                                <span class="title">test</span>
+                            </a>
+                        </li>
+                        <li class="list">
+                            <a href="#" class="tagRank">
+                                <em class="num">9</em>
+                                <span class="title">test</span>
+                            </a>
+                        </li>
+                        <li class="list">
+                            <a href="#" class="tagRank">
+                                <em class="num">10</em>
+                                <span class="title">test</span>
+                            </a>
+                        </li>
                     </ol>
                 </div>
             </p>
@@ -28,15 +83,70 @@
         <div class="realtimePopulateTagBox">
             <p class="realtimePopulateTag">
             <div class="tagTitle">
-                <h2>오늘의 인기 태그</h2>  <!-- 하루 지나면 reset -->
+                <h2>오늘의 인기 태그</h2> <!-- 채팅 서버에서 끊어질 때마다 count -1 해야함 -->
             </div>
             <div class="tagListBox">
                 <ol class="tagList">
-                    <li class="tagRank">안녕하세요</li>
-                    <li class="tagRank">안녕하세요</li>
-                    <li class="tagRank">안녕하세요</li>
-                    <li class="tagRank">안녕하세요</li>
-                    <li class="tagRank">안녕하세요</li>
+                    <li class="list">
+                        <a href="#" class="tagRank">
+                            <em class="num">1</em>
+                            <span class="title">test</span>
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="#" class="tagRank">
+                            <em class="num">2</em>
+                            <span class="title">test</span>
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="#" class="tagRank">
+                            <em class="num">3</em>
+                            <span class="title">test</span>
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="#" class="tagRank">
+                            <em class="num">4</em>
+                            <span class="title">test</span>
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="#" class="tagRank">
+                            <em class="num">5</em>
+                            <span class="title">test</span>
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="#" class="tagRank">
+                            <em class="num">6</em>
+                            <span class="title">test</span>
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="#" class="tagRank">
+                            <em class="num">7</em>
+                            <span class="title">test</span>
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="#" class="tagRank">
+                            <em class="num">8</em>
+                            <span class="title">test</span>
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="#" class="tagRank">
+                            <em class="num">9</em>
+                            <span class="title">test</span>
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="#" class="tagRank">
+                            <em class="num">10</em>
+                            <span class="title">test</span>
+                        </a>
+                    </li>
                 </ol>
             </div>
             </p>
